# traact_install

./: .gitignore  CMakeLists.txt  README  conanfile.py
tests/: CMakeLists.txt  InstallTest.cpp
